tests/Rules/Structure/Fixtures/valid/area_empty_alt_decorative.html.twig
<area href="#" alt="" role="presentation">
